<resources>
    <string name="app_name">Parco</string>
    <string name="skip">Skip</string>
    <string name="hassle">Parking can be hassle</string>
    <string name="parco">parco</string>
    <string name="register">REGISTER</string>
    <string name="login">LOG IN</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="your_info">Your Information</string>
    <string name="hint_f_name">First Name</string>
    <string name="hint_l_name">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="hint_repassword">Re-Type Passord</string>
    <string name="hint_mobile">Mobile Phone</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="car_info">Car Information</string>
    <string name="car_model">Car Model</string>
    <string name="color">Color</string>
    <string name="car_type">Car Type</string>
    <string name="sedan">Sedan</string>
    <string name="suv">SUV</string>
    <string name="pick_up_truck">PICK UP TRUCK</string>
    <string name="sport">SPORT</string>
    <string name="terms_txt"><![CDATA[Selecting \"Create Account\" confirms the acceptance of our Terms and Condition & Privacy Policy]]></string>
    <string name="create_account">Create Account</string>
    <string name="type_to_search">Type to search</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pin_your_loc">Pin your location or search here</string>
    <string name="lets_parco">LET\'S PARCO</string>
    <string name="pick_up_later">Pick up later</string>
    <string name="pick_up_now">Pick up now</string>
    <string name="select_pickup_time">Select Pickup Time</string>
    <string name="done">Done</string>
    <string name="which_car_pickup">Which car shall we pick up?</string>
    <string name="add_new_one">Add a new one?</string>
    <string name="additional_services">Additional Services</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="fill">Fill</string>
    <string name="car_wash">Car Wash (5 kd)</string>
    <string name="the_fare_is">The fare is</string>
    <string name="info_about_balance">Information about balance situation and services goes here</string>
    <string name="prepaid_credit">Prepaid Credit</string>
    <string name="knet">KNET</string>
    <string name="credit_card">Credit Card</string>

    <string name="user_info">User Info</string>
    <string name="my_cars">My Cars</string>
    <string name="history">History</string>
    <string name="notification">Notifications</string>
    <string name="language">Language</string>
    <string name="current_pickup">Current Pickup</string>
    <string name="scheduled_pickup">Scheduled Pickup</string>
    <string name="curent_credit">Current Credit</string>
    <string name="credit_text">Make your life easier. Add credit to your account to speed up the cheakout process.</string>
    <string name="purchase_credit">Purchase Credit</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="packeges">Packeges</string>
    <string name="account">Account</string>
    <string name="add_car">Add Car</string>
    <string name="you_havnt_car">You don\'t have any car</string>
    <string name="plz_add_car">Please add new car</string>
    <string name="add_new_car">Add a new Car</string>
    <string name="previous_pickups">Previous Pickups</string>
    <string name="current_scheduled">Current/Scheduled</string>
    <string name="overview">Overview</string>
    <string name="status">Status : </string>
    <string name="price">Price : </string>
    <string name="date">Date :</string>
    <string name="return_my_car">Return my car</string>
    <string name="return_my_key">Return my key</string>
    <string name="details">Details</string>
    <string name="faq">FAQ</string>
    <string name="parco_packages">Parco Packages</string>
    <string name="active_packages">Active Packages</string>
    <string name="the_plan">The plan \"Early Bird\" is currntly active . Be sure to choose \"Packages\" on the payment page to active it . Happy Parking!</string>
    <string name="packege_details">Package Details</string>
    <string name="pickups">Pickups</string>
    <string name="other">Other</string>
    <string name="wash">Wash</string>
    <string name="fual">Fuel</string>
    <string name="alert_no_internet">Please check your connection</string>
    <string name="wait">Please wait</string>
    <string name="err_msg_fname">Please enter your first name</string>
    <string name="err_msg_lname">Please enter your last name</string>
    <string name="err_msg_dob">Please select your birthday date</string>
    <string name="err_msg_gender">Please select your gender</string>
    <string name="err_msg_email">Please enter correct email</string>
    <string name="err_msg_password">Please enter password</string>
    <string name="err_msg_repassword">RetypePassword does not match Password</string>
    <string name="err_msg_mobile">Please enter your mobile number</string>
    <string name="err_car_model">Please select your car model</string>
    <string name="err_car_color">Please select your car color</string>
    <string name="err_fuel_type">Please select your fuel type</string>
    <string name="err_car_type">Please select your car type</string>
    <string name="err_slct_pin">Please Select pin location</string>
    <string name="email_info">Email us</string>
    <string name="phone_us">Call us</string>
    <string name="select_image">Select Image</string>
    <string name="update">Update</string>
    <string name="change_pass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="change">Change</string>
    <string name="old_pass_empty">Please enter old password</string>
    <string name="new_pass_empty">Please enter new password</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_verification_code">Enter verification code to verify your number</string>
    <string name="send">Send</string>
    <string name="err_empty_code">Please enter verification code</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="resend_code">Resend Code</string>
    <string name="congrats">Congrats</string>
    <string name="you_can_start">You are all set ! Start off by pinning your location and we\'ll pick up your car</string>
    <string name="lets_go">Lets Do it</string>
    <string name="ok">Okay</string>
    <string name="sry_no_driver">Sorry no drivers are available now</string>
    <string name="plz_slct_later_time">Please select a later time so we may pick up your car.</string>
    <string name="when_u_ready">When you are ready for your car , how would you like it returned ?</string>
    <string name="parking">Parking</string>
    <string name="credit">Credit</string>
    <string name="purchase">Purchase</string>
    <string name="you_dont_have_pickup">You don\'t have any current or scheduled pickups</string>
    <string name="you_dont_have_prev_pickup">You don\'t have any previous pickups</string>
    <string name="you_dont_have_notification">You don\'t have any notifications</string>
    <string name="code">Code you are recieved on the email</string>
    <string name="check">Check code</string>
    <string name="rest">Rest Password</string>
    <string name="code_empty">Please Enter Code</string>
    <string name="language_flip">Do you want to change the Language?</string>
    <string name="enter_you_email">Enter your email Id :</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="car">Car :</string>
    <string name="pass_not_match">Passwords Don\'t match</string>

</resources>
