<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="mawaqaa.parco.Fragment.YesAdditionalFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/additional_services" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray" />




    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray" />

    <TextView
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/fill" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">



        <android.support.v7.widget.RecyclerView
            android:id="@+id/fill_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">
        </android.support.v7.widget.RecyclerView>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="4"
        android:background="@color/gray"
        android:orientation="horizontal">

        <TextView
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/another_txt"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/car_wash" />
        <RadioGroup
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent">


            <RadioButton
                android:textColor="@android:color/darker_gray"
                android:id="@+id/yes_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/yes"
                android:textStyle="bold" />

            <RadioButton
                android:textColor="@android:color/darker_gray"
                android:id="@+id/no_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/no"
                android:textStyle="bold" />

        </RadioGroup>


    </LinearLayout>

    <Button
        android:textAllCaps="false"
        android:textSize="17sp"
        android:id="@+id/done_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_blue"
        android:text="@string/done"
        android:textColor="@color/white" />

</LinearLayout>