<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="mawaqaa.parco.Fragment.ReturnCarFragment">

    <TextView
        android:textColor="#7d7d7d"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/when_u_ready"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/return_my_car"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_sedan" />

        <!--bold fonts-->
        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/return_my_car"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/return_my_key"

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/key_ic" />

        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/return_my_key"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>
