<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="mawaqaa.parco.Activity.RestPassWordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <LinearLayout
            android:id="@+id/check_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/N"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/code"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/feld"
                android:ems="10"
                android:gravity="center"
                android:inputType="phone"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/check_btn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/btn_blue"
                android:gravity="center"
                android:text="@string/check"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_pass_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_pass_txt"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/new_pass"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/new_pass_edit"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/feld"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/rest_btn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/btn_blue"
                android:gravity="center"
                android:text="@string/rest"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>